package searchemployeefromdatabase;

import javafx.scene.control.Control;

public interface ICheckInput {
    public boolean isNotNull(Control obj);
}
