package searchemployeefromdatabase;

public interface IDistinctField {

    public String getDistinctClause();
}
