package searchemployeefromdatabase;

public interface IField {

    public String getWhereClause(String whereClause);
}
